<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_restore_builtin">Restore builtin recipes only</string>
    <string name="action_restore_recipes">Restore all recipes</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_preferment">Add preferment</string>
    <string name="add_preferment_menu">Add preferment</string>
    <string name="adjust_by_per">Adjusted by percentaje</string>
    <string name="adjust_by_per_menu">Adjust by percentaje</string>
    <string name="adjust_by_weight">Adjusted by weight</string>
    <string name="adjust_by_weight_menu">Adjust by weight</string>
    <string name="adjust_mode_tv">Adjusted by weight</string>
    <string name="append_copy">" (Copy)"</string>
    <string name="cannot_delete_reference_ingredient">Cannot remove reference ingredient</string>
    <string name="delete_all_recipes_msg">You will loose your recipes</string>
    <string name="delete_ingredient_answer">Do you want to remove the ingredient?</string>
    <string name="delete_only_original_msg">Builtin recipes will be restored</string>
    <string name="delete_only_original_title">Restore?</string>
    <string name="delete_recipe_answer">Do you want to remove the recipe?</string>
    <string name="delete_recipes_answer">Restore?</string>
    <string name="duplicate_recipe">Duplicate recipe</string>
    <string name="duplicated_recipe_name_error">Recipe already exist</string>
    <string name="edit_ingredient">Edit ingredient:</string>
    <string name="edit_mode_disabled">Edition disabled</string>
    <string name="edit_mode_enabled">Edition enabled</string>
    <string name="elaboration_notes_tv">Elaboration notes:</string>
    <string name="error_removing_recipe">Error deleting notes</string>
    <string name="help">Help</string>
    <string name="help_tv">Help</string>
    <string name="hydration_tv">Hydration:</string>
    <string name="ingredient_deleted">Deleted ingredient</string>
    <string name="ingredient_name_et">Ingredient name</string>
    <string name="ingredient_name_tv">Ingredient name:</string>
    <string name="liquid_ingredient_tv">Use as liquid</string>
    <string name="new_name">New name:</string>
    <string name="new_recipe">New recipe:</string>
    <string name="no">No</string>
    <string name="no_mail_clients_installed">Not e-mail client installed</string>
    <string name="notes">Notes</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="notes_not_found">Empty note</string>
    <string name="ok">OK</string>
    <string name="percentage">Percentaje:</string>
    <string name="preferment_added">Preferment added</string>
    <string name="preferment_text">Preferment:</string>
    <string name="put_percentage">Set percentaje</string>
    <string name="put_weight">Set weight (grams)</string>
    <string name="quantity_et">Quantity</string>
    <string name="quantity_tv">Quantity:</string>
    <string name="recipe_duplicate_ko">Error duplicating recipe</string>
    <string name="recipe_duplicate_ok">Recipe duplicated</string>
    <string name="recipe_has_already_preferment">Recipe already has preferment</string>
    <string name="recipe_name_duplicated">Recipe already exists</string>
    <string name="recipe_name_tv">Recipe name</string>
    <string name="recipe_removed">Recipe deleted</string>
    <string name="reference_ingredient_cb">Use as flour</string>
    <string name="remove">Delete</string>
    <string name="remove_notes_msg">Do you want to remove notes?</string>
    <string name="select_recipe_tv">Select a recipe from the list:</string>
    <string name="settings_restablished">Settings restablished</string>
    <string name="total_flour_tv">Flour:</string>
    <string name="total_liquid">Liquid:</string>
    <string name="type_name">Type a name</string>
    <string name="use_as_preferment">Use as preferment</string>
    <string name="weight">Weight:</string>
    <string name="weight_tv">Dough:</string>
    <string name="yes">Yes</string>
    <string name="app_load_prefs" translatable="false">app_load_prefs</string>
    <string name="app_name">Doughlator</string>
    <string name="edit">Edit</string>
    <string name="loaded_vol1_flag">loaded_vol1_flag</string>
    <string name="loaded_vol2_flag">loaded_vol2_flag</string>
    <string name="loaded_vol3_flag">loaded_vol3_flag</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_planner">PlannerActivity</string>
    <string name="user_recipe_list" translatable="false">recipelist.list</string>
    <string name="select_preferment_tv">Select preferment</string>
    <string name="flour_ingredient">Flour</string>
    <string name="water_ingredient">Water</string>
    <string name="yeast_ingredient">Yeast</string>
    <string name="salt_ingredient">Salt</string>
    <string name="hello_mail">Hello!\n\n</string>
    <string name="try_this_recipe_mail">Try this recipe: </string>
    <string name="ingredients_mail">Ingredients: \n\n</string>
    <string name="weight_mail">Weight: </string>
    <string name="preferment_hydration_mail">Preferment hydration: </string>
    <string name="elaboration_mail">Elaboration:</string>
    <string name="sent_from_doughlator_mail">Sent from Doughlator</string>
    <string name="send_mail_mail">Send e-mail</string>
    <string name="hydration_rate_mail">Hydration rate:</string>
</resources>