<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    tools:context="com.casa.doughlator.DetailActivity">

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_alignParentLeft="true"
                android:id="@+id/flourWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/total_flour_tv"/>

            <TextView
                android:id="@+id/flourTv"
                android:layout_toRightOf="@id/flourWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="prueba"/>

            <TextView
                android:id="@+id/liquidWeightTv"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/flourWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/total_liquid"/>

            <TextView
                android:id="@+id/liquidTv"
                android:layout_below="@id/flourTv"
                android:layout_toRightOf="@id/liquidWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="prueba"/>

            <TextView
                android:id="@+id/weightTv"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="prueba"/>

            <TextView
                android:id="@+id/weightTextTv"
                android:layout_toLeftOf="@id/weightTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/weight_tv"/>

            <TextView
                android:id="@+id/prefermentTv"
                android:layout_below="@id/weightTv"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="prueba"/>

            <TextView
                android:id="@+id/prefermentTextTv"
                android:layout_below="@id/weightTextTv"
                android:layout_toLeftOf="@id/prefermentTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/preferment_text"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp">

            <ImageView
                android:id="@+id/hydrabarIv"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/hydrabar"/>

            <TextView
                android:id="@+id/currHydrationTv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="50%"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/hydrationLayout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minHydratioTv"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="0%"/>

            <TextView
                android:id="@+id/maxHydrationTv"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="100%"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">
        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adjustmentTextTv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/adjust_mode_tv"
            android:textStyle="normal"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>
